엘라스틱 서치 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,1 @@
-# local MySQL
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/flora_shop?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=wlscjf9687!A
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-
-# Google OAuth2
-#spring.security.oauth2.client.registration.google.client-id = 1080006696717-4v99b51jpvd3fdhqbrh4hh0icj62oksi.apps.googleusercontent.com
-#spring.security.oauth2.client.registration.google.client-secret=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
-#spring.security.oauth2.client.registration.google.scope=profile,email
-spring.profiles.include=oauth
-
-# ??? ??? ???? ? ???? ?? ? ?? ??
-# https://accounts.google.com/o/oauth2/auth?client_id=1080006696717-4v99b51jpvd3fdhqbrh4hh0icj62oksi.apps.googleusercontent.com&redirect_uri=https://localhost:8080/login/oauth2/code/google&response_type=code&scope=https://www.googleapis.com/auth/userinfo.emailhttps://www.googleapis.com/auth/userinfo.profile
+spring.profiles.include=oauth, mysql, elk
